# zpool-monitor

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
zpool_monitor/: __init__.py  apps.py  cliargs.py  monitor.py  scanstatus.py  utilities.py  vdev.py  vdevs.py  zpool.py
zpool_monitor/textual/: __init__.py  dashboard.css  dashboard.py  zpoolpanel.py
zpool_monitor/zpool/: formatting.py  scanstatus.py  vdev.py  vdevs.py  zpool.py
