[project]
name = "zpool-monitor"
version = "0.0.2"
authors = [
  { name="Jason But", email="jbut@swin.edu.au" },
]
description = "ZPool Status Monitor - A 'pretty' replacement for the 'zpool status' command"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = ["rich", "textual"]

[project.scripts]
zpool_mon = "zpool_monitor.apps:zpool_mon"

[project.urls]
Homepage = "https://github.com/jason-but/zpool-monitor"
Issues = "https://github.com/jason-but/zpool-monitor/issues"
